# yomikomi

./: Dockerfile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
yomikomi_front_prj/: Dockerfile  package-lock.json  package.json
yomikomi_front_prj/src/app/api/googlebooks/: route.ts
yomikomi_prj/: Cargo.toml
yomikomi_prj/assets/css/: index.css
yomikomi_prj/src/: api.rs  lib.rs  main.rs  model.rs  render.rs  route.rs
yomikomi_prj/src/googlebooks/: api.rs  route.rs
yomikomi_prj/templates/: index.html
