[package]
name = "yomikomi_prj"
version = "0.1.0"
edition = "2021"

[lib]
name = "yomikomi_prj"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking","json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0",features = ["derive"] }
serde_json = "1.0"
actix-web = "4"